Large search box improved further - heights of left and right side are the same on mobile - found the bug with dgu-equal-height.

--- a/src/css/dgu-shared.less
+++ b/src/css/dgu-shared.less
@@ -620,6 +620,10 @@ h1 .subheading {
     float: left;
     .right-inner {
       background: #A2A2A2;
+      @media (max-width: 767px) {
+        border: 1px solid #a2a2a2;
+        border-left-width: 0;
+      }
       color: #fff;
       position: relative;
       min-height: 90px;
